--- a/app/src/main/res/layout/content_add_kino.xml
+++ b/app/src/main/res/layout/content_add_kino.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="git.rrigby.kinolog.AddKino"
+    tools:context=".AddKino"
     tools:showIn="@layout/activity_add_kino">
 
     <EditText
