--- a/app/src/main/res/layout/content_add_review.xml
+++ b/app/src/main/res/layout/content_add_review.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="git.rrigby.kinolog.AddReview"
+    tools:context=".AddReview"
     tools:showIn="@layout/activity_add_review">
     <RatingBar
         android:id="@+id/kino_rating_bar"
@@ -24,4 +24,11 @@
         android:inputType="text|textMultiLine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/kino_review_date"
+        android:layout_below="@id/kino_review_text"
+        android:hint="@string/review_hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="date"/>
 </RelativeLayout>
