--- a/app/src/main/res/layout/content_view_kino.xml
+++ b/app/src/main/res/layout/content_view_kino.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="git.rrigby.kinolog.ViewKino"
+    tools:context=".ViewKino"
     tools:showIn="@layout/activity_view_kino">
 
     <ImageView
@@ -52,6 +52,12 @@
     <TextView
         android:id="@+id/view_review"
         android:layout_below="@id/view_rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"/>
+    <TextView
+        android:id="@+id/view_review_date"
+        android:layout_below="@id/view_review"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"/>
