[CineLog] prepare dev of export functionnality
  - create an export activity
  - add button in settings to make export
  - start dev of some classes (the initial goal was to use opencsv lib, but it is not android compatible)

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -43,8 +43,8 @@
 
     </item>
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_export"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_export"
         app:showAsAction="never" />
 </menu>
