--- a/app/src/main/res/layout/activity_export_db.xml
+++ b/app/src/main/res/layout/activity_export_db.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".export.ExportDb">
+    tools:context=".exportdb.ExportDb">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
