--- a/app/src/main/res/layout/content_view_kino.xml
+++ b/app/src/main/res/layout/content_view_kino.xml
@@ -47,6 +47,7 @@
         android:layout_below="@id/view_overview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="?android:attr/ratingBarStyleSmall"
         android:isIndicator="true"/>
 
     <TextView
