--- a/app/src/main/res/layout/content_add_review.xml
+++ b/app/src/main/res/layout/content_add_review.xml
@@ -13,43 +13,42 @@
     tools:context=".AddReview"
     tools:showIn="@layout/activity_add_review">
 
-    <LinearLayout
-        android:id="@+id/rating_layout"
+    <RatingBar
+        android:id="@+id/kino_rating_bar"
+        style="?android:attr/ratingBarStyleSmall"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <RatingBar
-            android:id="@+id/kino_rating_bar"
-            style="?android:attr/ratingBarStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content" />
 
-        <NumberPicker
-            android:id="@+id/rating_picker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+    <NumberPicker
+        android:id="@+id/rating_picker"
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/kino_rating_bar" />
 
     <EditText
         android:id="@+id/kino_review_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/rating_layout"
+        android:layout_below="@id/rating_picker"
         android:hint="@string/review_hint"
         android:inputType="text|textMultiLine" />
 
     <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@id/kino_review_text"
-        android:layout_width="fill_parent">
+        android:orientation="horizontal">
+
         <TextView
             android:id="@+id/kino_review_date"
-            android:layout_height="wrap_content"
             android:layout_width="fill_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:hint="Enter the review date"/>
+            android:layout_weight="1"
+            android:hint="Enter the review date" />
+
         <Button
             android:id="@+id/kino_review_date_button"
             android:layout_width="wrap_content"
