--- a/app/src/main/res/xml/preference_headers.xml
+++ b/app/src/main/res/xml/preference_headers.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <header android:fragment="com.alcidauk.cinelog.settings.SettingsFragment"
-        android:title="General preferences"
-        android:summary="Set the global preferences of this app." />
+        android:title="@string/general_preferences"
+        android:summary="@string/general_preferences_summary" />
 
 </preference-headers>
