--- a/app/src/main/res/layout/activity_view_kino.xml
+++ b/app/src/main/res/layout/activity_view_kino.xml
@@ -29,6 +29,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/add_kino" />
+        app:srcCompat="@drawable/edit_kino" />
 
 </android.support.design.widget.CoordinatorLayout>
