[CineLog] add padding bottom to view kino to avoid floatingactionbutton hiding components

--- a/app/src/main/res/layout/content_view_kino.xml
+++ b/app/src/main/res/layout/content_view_kino.xml
@@ -20,7 +20,8 @@
             android:id="@+id/view_kino_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="100dp">
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/view_kino_tmdb_layout"
