--- a/app/src/main/res/layout/content_add_review.xml
+++ b/app/src/main/res/layout/content_add_review.xml
@@ -6,99 +6,109 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".AddReview"
     tools:showIn="@layout/activity_add_review">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/view_kino_review_layout"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/add_review_scroll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/view_kino_review_content_title_layout"
-            style="?android:attr/listSeparatorTextViewStyle"
-            android:text="@string/view_poster_review_layout_title" />
-
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/view_kino_review_content_layout"
+            android:id="@+id/view_kino_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="10dp">
-
-            <RatingBar
-                android:id="@+id/kino_rating_bar"
-                style="?android:attr/ratingBarStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <NumberPicker
-                android:id="@+id/rating_picker"
-                android:layout_width="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/kino_rating_bar" />
+            android:paddingBottom="100dp">
 
             <TextView
-                android:id="@+id/view_kino_review_review_date_label"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="@string/view_kino_review_review_date_label_value"/>
-
-            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/view_kino_review_review_date_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
-                <TextView
-                    android:id="@+id/kino_review_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerInParent="true"
-                    android:layout_weight="1"
-                    android:hint="Enter the review date"/>
-                <Button
-                    android:id="@+id/kino_review_date_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="showTimePickerDialog"
-                    android:text="Changer"
-                    android:layout_centerInParent="true"
-                    android:layout_alignParentEnd="true"
-                    tools:ignore="RelativeOverlap"/>
-            </RelativeLayout>
+                android:id="@+id/view_kino_review_content_title_layout"
+                style="?android:attr/listSeparatorTextViewStyle"
+                android:text="@string/view_poster_review_layout_title" />
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/view_kino_review_review_layout"
+                android:id="@+id/view_kino_review_content_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/view_kino_review_review_label"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp">
+
+                <RatingBar
+                    android:id="@+id/kino_rating_bar"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <NumberPicker
+                    android:id="@+id/rating_picker"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:text="@string/view_kino_review_review_label_value"/>
-                <EditText
-                    android:id="@+id/kino_review_text"
+                    android:layout_below="@id/kino_rating_bar"
+                    android:layout_centerHorizontal="true" />
+
+                <TextView
+                    android:id="@+id/view_kino_review_review_date_label"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/review_hint"
-                    android:inputType="text|textMultiLine" />
-            </LinearLayout>
+                    android:text="@string/view_kino_review_review_date_label_value"
+                    android:textStyle="bold" />
 
+                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/view_kino_review_review_date_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/kino_review_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerInParent="true"
+                        android:layout_weight="1"
+                        android:hint="Enter the review date" />
+
+                    <Button
+                        android:id="@+id/kino_review_date_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerInParent="true"
+                        android:onClick="showTimePickerDialog"
+                        android:text="Changer"
+                        tools:ignore="RelativeOverlap" />
+                </RelativeLayout>
+
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/view_kino_review_review_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/view_kino_review_review_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/view_kino_review_review_label_value"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:id="@+id/kino_review_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/review_hint"
+                        android:inputType="text|textMultiLine" />
+                </LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
