--- a/app/src/main/res/layout/content_edit_review.xml
+++ b/app/src/main/res/layout/content_edit_review.xml
@@ -8,8 +8,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".AddReview"
-    tools:showIn="@layout/activity_add_review">
+    tools:context=".EditReview"
+    tools:showIn="@layout/activity_edit_review">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/add_review_scroll"
