[CineLog] add a second tab that will allow to add serie reviews:
  - create a tablayout and a pageviewer where lists will be now shown
  - create two fragments: one for movies, one for series
  - move code of MainActivity in MovieFragment

--- a/app/src/main/res/layout/main_result_item.xml
+++ b/app/src/main/res/layout/main_result_item.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:paddingEnd="5dp"
+    android:paddingStart="5dp">
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,7 +16,7 @@
         android:minHeight="150px"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:paddingRight="5dp"/>
+        android:paddingEnd="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
