--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,6 @@
 <resources>
     <color name="colorPrimary">#ff7676</color>
     <color name="colorPrimaryDark">#ff5151</color>
+    <color name="colorPrimaryLight">#ffb3b3</color>
     <color name="colorAccent">#555555</color>
 </resources>
